--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 PORT=3001
 DATABASE_URL=mongodb+srv://your-username:your-password@your-cluster-url.your-region.mongodb.net/your-database-name
+SECRET=huhWhatSecret
