--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 PORT=yourPort
 DATABASE_URL=mongodb+srv://your-username:your-password@your-cluster-url.your-region.mongodb.net/your-database-name
 SECRET=yourSecret
-AWS_BUCKET_NAME=example-bucket
-AWS_S3_OBJECT_URL=https://<example-bucket>.s3.region.amazonaws.com
-AWS_REGION=your-region
-AWS_ACCESS_KEY=yourAWSAccessKey
-AWS_SECRET_ACCESS_KEY=yourAWSSecretAccessKey
+MY_AWS_ID=yourAWSAccessKeyID
+MY_AWS_SECRET=yourAWSSecretAccessKey
+MY_AWS_STORAGE_BUCKET=example-bucket
+MY_AWS_REGION=your-region
+MY_AWS_S3_OBJECT_URL=https://<example-bucket>.s3.region.amazonaws.com
+
