chore: remove port

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-PORT=yourPort
 DATABASE_URL=mongodb+srv://your-username:your-password@your-cluster-url.your-region.mongodb.net/your-database-name
 SECRET=yourSecret
 MY_AWS_ID=yourAWSAccessKeyID
 MY_AWS_SECRET=yourAWSSecretAccessKey
 MY_AWS_STORAGE_BUCKET=example-bucket
 MY_AWS_REGION=your-region
-MY_AWS_S3_OBJECT_URL=https://<example-bucket>.s3.region.amazonaws.com
+MY_AWS_OBJECT_URL=https://<example-bucket>.s3.region.amazonaws.com
 
